# slam-rs

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  screen.rs  ui.rs
src/cli/: cmd.rs  dmenu.rs  xrandr.rs
src/utils/: cmd.rs  dmenu.rs  xrandr.rs
